src/test/ui/resolve/resolve-primitive-fallback.stderr
error[E0423]: expected value, found builtin type `u16`
  --> $DIR/resolve-primitive-fallback.rs:3:23
   |
LL |     std::mem::size_of(u16);
   |                       ^^^ not a value

error[E0412]: cannot find type `u8` in the crate root
  --> $DIR/resolve-primitive-fallback.rs:8:14
   |
LL |     let _: ::u8;
   |              ^^ not found in the crate root
   |
help: consider importing this builtin type
   |
LL | use std::primitive::u8;
   |

error[E0308]: arguments to this function are incorrect
  --> $DIR/resolve-primitive-fallback.rs:3:5
   |
LL |     std::mem::size_of(u16);
   |     ^^^^^^^^^^^^^^^^^^---^
   |                       |
   |                       argument unexpected
   |
help: remove the extra argument
   |
LL |     ();
   |     ^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0412, E0423.
For more information about an error, try `rustc --explain E0308`.
